tatamcgrawhill.com (archived on 2009-09-22)
{
  "alexa_rank": 249299,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1565,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.16,
  "homepage_snapshot_redirected_domain": "tatamcgrawhill.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090929114741id_/http://www.tatamcgrawhill.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090929114741id_/http%3A//tatamcgrawhill.com",
  "interval": "2009_B",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "tatamcgrawhill.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090922191910id_/http%3A//www.tatamcgrawhill.com/privacy/index.jsp",
  "policy_title": "McGraw-Hill Education - Privacy Policy",
  "policy_url": "tatamcgrawhill.com/privacy/index.jsp",
  "sha1": "0c81435ab6e1cd61e20e35194693b9d04b333485",
  "simhash": 14184962841238602319,
  "simhash_updated": true,
  "site_hostname": "tatamcgrawhill.com",
  "site_url": "http://tatamcgrawhill.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090922191910",
  "word_count": 269,
  "year": 2009
}

--- a/t/ta/tat/tatamcgrawhill.com.html
+++ b/t/ta/tat/tatamcgrawhill.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tatamcgrawhill.com privacy policy that was archived on 2009-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090523223852id_/http%3A//www.tatamcgrawhill.com/privacy/index.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tatamcgrawhill.com privacy policy that was archived on 2009-09-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090922191910id_/http%3A//www.tatamcgrawhill.com/privacy/index.jsp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/corporate_s_Wrapper.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -39,6 +39,7 @@ function fwLoadMenus() {
 
 
 <!--      Header - Start         -------------------------->
+<!--      Dynamic Header Ho Yoke Yin 20090706 - Start    -------------------------->
 
 
 
@@ -395,7 +396,7 @@ function fwLoadMenus() {
   <!--      Search Bar - End        -------------------------->
 </tbody></table>
 
-
+<!--      Dynamic Header Ho Yoke Yin 20090706 - End    -------------------------->
 <!--      Header - End         -------------------------->
 <!--      Main Body - Start         -------------------------->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -561,25 +562,25 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <!--      Main Body - End         -------------------------->
 <!--      Copyright - Start         -------------------------->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tbody><tr> 
-    <td class="footer"> 
-      <div align="center"> 
+  <tbody><tr>
+    <td class="footer">
+      <div align="center">
         <p>&nbsp;</p>
-        <p>Copyright ©2005 <a href="http://www.mcgraw-hill.com" target="_blank"><u>The 
+        <p>Copyright ©2005 <a href="http://www.mcgraw-hill.com" target="_blank"><u>The
           McGraw-Hill Companies</u></a>.<br>
-          Any use is subject to the <a href="http://www.mcgraw-hill.com/copyrttm.htm" target="_blank"><u>Terms 
+          Any use is subject to the <a href="http://www.mcgraw-hill.com/copyrttm.htm" target="_blank"><u>Terms
           of Use</u></a> and <a href="/privacy/index.jsp" target="_blank"><u>Privacy
           Notice </u></a>. </p>
 		  <!--<a href="http://www.mcgraw-hill.com/privacy.html" target="_blank"><u>Privacy -->
         </div>
     </td>
   </tr>
-  <tr> 
-    <td> 
+  <tr>
+    <td>
       <table width="100%" border="0" cellpadding="0" cellspacing="0">
-        <tbody><tr> 
+        <tbody><tr>
           <td width="27%" height="36" valign="top"><br>
-            <a href="http://www.mheducation.com" target="_blank"><img src="/Templates/images/mhe.gif" width="95" height="20" border="0" class="leftimg"></a> 
+            <a href="http://www.mheducation.com" target="_blank"><img src="/Templates/images/mhe.gif" width="95" height="20" border="0" class="leftimg"></a>
           </td>
           <td width="50%"></td>
           <td width="175" valign="top" align="right"><br>
@@ -590,7 +591,17 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
   </tr>
 </tbody></table>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7992952-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+} catch(err) {}
+</script>
 <!--      Copyright - End         -------------------------->
 
 <!-- #EndTemplate -->
