--- a/b/bl/blu/blueskyresumes.com.html
+++ b/b/bl/blu/blueskyresumes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blueskyresumes.com privacy policy that was archived on 2009-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090525193451id_/http%3A//blueskyresumes.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blueskyresumes.com privacy policy that was archived on 2009-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090923131846id_/http%3A//www.blueskyresumes.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html><head>
 <title>Blue Sky Resumes : Privacy Policy</title>
@@ -143,4 +143,4 @@ var DOCUMENTNAME='Blue Sky Resumes : Privacy Policy';
 <!-- End of IndexTools Code -->
 
 
-<script language="JavaScript" src="http://us.js2.yimg.com/us.js.yimg.com/lib/smb/js/hosting/cp/js_source/whv2_001.js"></script><script language="javascript">geovisit();</script><noscript><img src="http://visit.webhosting.yahoo.com/visit.gif?us1243280091" alt="setstats" border="0" width="1" height="1"></noscript></body></html>
+<script language="JavaScript" src="http://us.js2.yimg.com/us.js.yimg.com/lib/smb/js/hosting/cp/js_source/whv2_001.js"></script><script language="javascript">geovisit();</script><noscript><img src="http://visit.webhosting.yahoo.com/visit.gif?us1253711926" alt="setstats" border="0" width="1" height="1"></noscript></body></html>
