svwh.net (archived on 2009-09-23)
{
  "alexa_rank": 257931,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2690,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 17.55,
  "homepage_snapshot_redirected_domain": "svwh.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090925060146id_/http://www.svwh.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090925060146id_/http%3A//svwh.net",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "svwh.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090923131915id_/http%3A//www.svwh.net/privacy_policy.php",
  "policy_title": "Silicon Valley Web Hosting Privacy Policy",
  "policy_url": "svwh.net/privacy_policy.php",
  "sha1": "dccf47457e193404d63b5556c6b8d75f6be53c9a",
  "simhash": 3909156449727368918,
  "simhash_updated": false,
  "site_hostname": "svwh.net",
  "site_url": "http://svwh.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090923131915",
  "word_count": 378,
  "year": 2009
}

--- a/s/sv/svw/svwh.net.html
+++ b/s/sv/svw/svwh.net.html
@@ -1,16 +1,19 @@
-<!--The following is the downloaded HTML source of the svwh.net privacy policy that was archived on 2009-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612132651id_/http%3A//www.svwh.net/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the svwh.net privacy policy that was archived on 2009-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090923131915id_/http%3A//www.svwh.net/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Silicon Valley Web Hosting Privacy Policy</title>
 <link href="/css/web.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<!--[if IE]>
-<link href="/css/web_ie.css" rel="stylesheet" type="text/css" />
+<!--[if gte IE 6]>
+<link href="/css/web_ie6.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 <!--[if gte IE 7]>
 <link href="/css/web_ie7.css" rel="stylesheet" type="text/css" />
+<![endif]-->
+<!--[if gte IE 8]>
+<link href="/css/web_ie8.css" rel="stylesheet" type="text/css" />
 <![endif]-->
 
 <link href="/css/print.css" rel="stylesheet" type="text/css" media="print">
@@ -19,7 +22,7 @@
 <script type="text/javascript" src="/js/email.js"></script>
 <script type="text/javascript" src="/js/email_protect.js"></script>
 <script type="text/javascript" src="/js/standard.js"></script>
-
+<script type="text/javascript" src="/js/ac_runactivecontent.js"></script>
 <!-- ****** Infinite Menus Core CSS [Do Not Modify!] ****** -->
 <style type="text/css">.imcm ul,.imcm li,.imcm div,.imcm span,.imcm a{text-align:left;vertical-align:top;padding:0px;margin:0;list-style:none outside none;border-style:none;background-image:none;clear:none;float:none;display:block;position:static;overflow:visible;line-height:normal;}.imcm li a img{display:inline;border-width:0px;}.imcm span{display:inline;}.imcm .imclear,.imclear{clear:both;height:0px;visibility:hidden;line-height:0px;font-size:1px;}.imcm .imsc{position:relative;}.imcm .imsubc{position:absolute;visibility:hidden;}.imcm li{list-style:none;font-size:1px;float:left;}.imcm ul ul li{width:100%;float:none !important;}.imcm a{display:block;position:relative;}.imcm ul .imsc,.imcm ul .imsubc {z-index:10;}.imcm ul ul .imsc,.imcm ul ul .imsubc{z-index:20;}.imcm ul ul ul .imsc,.imcm ul ul ul .imsubc{z-index:30;}.imde ul li:hover .imsubc{visibility:visible;}.imde ul ul li:hover  .imsubc{visibility:visible;}.imde ul ul ul li:hover  .imsubc{visibility:visible;}.imde li:hover ul  .imsubc{visibility:hidden;}.imde li:hover ul ul .imsubc{visibility:hidden;}.imde li:hover ul ul ul  .imsubc{visibility:hidden;}.imcm .imea{display:block;position:relative;left:0px;font-size:1px;line-height:1px;height:0px;width:1px;float:right;}.imcm .imea span{display:block;position:relative;font-size:1px;line-height:0px;}.dvs,.dvm{border-width:0px}/*\*//*/.imcm .imea{visibility:hidden;}/**/</style><!--[if IE]><style type="text/css">.imcm .imea span{position:absolute;}.imcm .imclear,.imclear{display:none;}.imcm{zoom:1;} .imcm li{curosr:hand;} .imcm ul{zoom:1}.imcm a{zoom:1;}</style><![endif]--><!--[if gte IE 7]><style type="text/css">.imcm .imsubc{background-image:url(ie_css_fix);}</style><![endif]-->
 <link rel="stylesheet" href="/css/imenus0.css" type="text/css">
@@ -33,12 +36,9 @@
 </head>
 
 <body>
-<div id="container"><img src="/images/logo_print.jpg" alt="Silicon Valley Web Hosting" class="logoprint">
-<div id="topstrip"><a href="/"><img src="/images/logo.jpg" alt="Silicon Valley Web Hosting" width="235" height="83" border="0" align="left" title="Silicon Valley Web Hosting" class="logo"></a><p><script language="javascript" type="text/javascript">  
+<div id="container"><img src="/images/logo_print.jpg" alt="Silicon Valley Web Hosting" class="logoprint"><div id="topstrip"><a href="/"><img src="/images/logo.jpg" alt="Silicon Valley Web Hosting" width="235" height="83" border="0" align="left" title="Silicon Valley Web Hosting" class="logo"></a><p><script language="javascript" type="text/javascript">  
 DisplayMail('svwh.net', 'support', 'Open a Ticket');  
-</script><a href="mailto:support@svwh.net">Open a Ticket</a> | <a href="/contact_wholesale_host.php">Contact</a> | <a href="https://billing.svwh.net/" target="_blank">My Account</a>
-  </p>
-  <a href="/contact_wholesale_host.php"><img src="/images/get_svwh.jpg" alt="888-GET-SVWH" width="342" height="30" border="0" align="right" class="tag" title="888-GET-SVWH"></a></div>
+</script><a href="mailto:support@svwh.net">Open a Ticket</a> | <a href="/contact_wholesale_host.php">Contact</a> | <a href="https://billing.svwh.net/" target="_blank">My Account</a></p><a href="/contact_wholesale_host.php"><img src="/images/get_svwh.gif" alt="888-GET-SVWH" width="342" height="30" border="0" align="right" class="tag" title="888-GET-SVWH"></a></div>
 <div id="nav"><div class="imrcmain0 imgl" style="width:990px;z-index:999999;position:relative;"><div class="imcm" id="imouter0"><ul id="imenus0">
 <li class="imatm" style="width:198px;" title="Solutions" id="ulitem0z0"><a href="/solutions.php" himg="/images/nav/btn_r1_c1_f2.jpg" style="background-image:url(
 /images/nav/btn_r1_c1.jpg
@@ -120,6 +120,7 @@ DisplayMail('svwh.net', 'support', 'Open a Ticket');
     <li id="ulitem0z1z4z0"><a href="/store/catalog/Single_Processor_Single_Core-2-1.html" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z1z4z0">Single Processor | Single Core</a></li>
     <li id="ulitem0z1z4z1"><a href="/store/catalog/Multi_Processor_Single_Core-3-1.html" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z1z4z1">Multi Processor | Single Core</a></li>
      <li id="ulitem0z1z4z2"><a href="/store/catalog/Single_Processor_Multi_Core-26-1.html" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z1z4z2">Single Processor | Multi Core</a></li>
+     <li id="ulitem0z1z4z3"><a href="/store/catalog/Multi_Processor_Multi_Core-27-1.html" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z1z4z3">Multi Processor | Multi Core</a></li>
    </ul>
 		</div></div></li>
     <li id="ulitem0z1z5"><a href="/store/catalog/Compare_All_Dedicated_Servers-24-1.html" id="ulaitem0z1z5">Compare All Dedicated Servers</a></li>
@@ -159,20 +160,21 @@ DisplayMail('svwh.net', 'support', 'Open a Ticket');
 <div class="imsc"><div class="imsubc" style="width:200px;top:-9px;left:0px;"><ul style="" id="x1ub0z3">
 	<li id="ulitem0z3z0"><a href="/contact_wholesale_host.php" id="ulaitem0z3z0">Contact Us</a></li>
 	<li id="ulitem0z3z1"><a href="/web_hosting_company.php" id="ulaitem0z3z1">About Us</a></li>
-	<li id="ulitem0z3z2"><a href="/datacenter.php" id="ulaitem0z3z2">Data Center</a></li>
-	<li id="ulitem0z3z3"><span class="imea imeas"><span></span></span><a href="/acceptable_use.php" id="ulaitem0z3z3">Legal</a>
+	<li id="ulitem0z3z2"><a href="/news_nokeena.php" id="ulaitem0z3z2">Press</a></li>
+	<li id="ulitem0z3z3"><a href="/datacenter.php" id="ulaitem0z3z3">Data Center</a></li>
+	<li id="ulitem0z3z4"><span class="imea imeas"><span></span></span><a href="/acceptable_use.php" id="ulaitem0z3z4">Legal</a>
     
-    <div class="imsc" style="z-index:9999999;"><div class="imsubc" style="width:150px;top:-20px;left:184px; border-top:1px solid #000;"><ul style="" id="x1ub0z3z3">
-		<li id="ulitem0z3z3z0"><a href="/acceptable_use.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z0">Acceptable Use</a></li>
-        <li id="ulitem0z3z3z1"><a href="/privacy_policy.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z1">Privacy Policy</a></li>
-        <li id="ulitem0z3z3z2"><a href="/copyright.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z2">Copyright</a></li>
-        <li id="ulitem0z3z3z3"><a href="/end_user.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z3">End User Content</a></li>
-        <li id="ulitem0z3z3z4"><a href="/ip_justification.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z4">IP Justification</a></li>
-		<li id="ulitem0z3z3z5"><a href="/store/index.php?p=page&amp;page_id=terms_and_conditions" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z3z5">Terms &amp; Conditions</a></li>
+    <div class="imsc" style="z-index:9999999;"><div class="imsubc" style="width:150px;top:-20px;left:184px; border-top:1px solid #000;"><ul style="" id="x1ub0z3z4">
+		<li id="ulitem0z3z4z0"><a href="/acceptable_use.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z0">Acceptable Use</a></li>
+        <li id="ulitem0z3z4z1"><a href="/privacy_policy.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z1">Privacy Policy</a></li>
+        <li id="ulitem0z3z4z2"><a href="/copyright.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z2">Copyright</a></li>
+        <li id="ulitem0z3z4z3"><a href="/end_user.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z3">End User Content</a></li>
+        <li id="ulitem0z3z4z4"><a href="/ip_justification.php" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z4">IP Justification</a></li>
+		<li id="ulitem0z3z4z5"><a href="/store/index.php?p=page&amp;page_id=terms_and_conditions" style="text-align:left;padding:5px 0px 5px 5px;" id="ulaitem0z3z4z5">Terms &amp; Conditions</a></li>
     </ul>
     </div></div></li>
-	 <li id="ulitem0z3z4"><a href="http://blog.svwh.net" id="ulaitem0z3z4">SVWH Blog</a></li>
-    <li id="ulitem0z3z5"><a href="/referral.php" id="ulaitem0z3z5">Referral Program</a></li>
+	 <li id="ulitem0z3z5"><a href="http://blog.svwh.net" id="ulaitem0z3z5">SVWH Blog</a></li>
+    <li id="ulitem0z3z6"><a href="/referral.php" id="ulaitem0z3z6">Referral Program</a></li>
 	</ul>
 	</div></div>
 </li><li class="imatm" style="width:195px;" id="ulitem0z4"><a class="" href="/support.php" himg="/images/nav/btn_r1_c5_f2.jpg" style="background-image:url(
@@ -213,6 +215,9 @@ DisplayMail('svwh.net?Subject=Open a Ticket', 'support', 'Open a Ticket');
      <li class="nosub">
       <h2><a href="/web_hosting_company.php" class="about">About Us</a></h2>
     </li>
+     <li class="nosub">
+       <h2><a href="/news_nokeena.php">Press</a></h2>
+     </li>
      <li class="nosub">
       <h2><a href="/datacenter.php" class="data">Data Center</a> </h2>
     </li>
