--- a/c/ci/cik/cikoo.net.html
+++ b/c/ci/cik/cikoo.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cikoo.net privacy policy that was archived on 2009-04-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090428140626id_/http%3A//www.cikoo.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cikoo.net privacy policy that was archived on 2009-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090923182608id_/http%3A//www.cikoo.net/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Cikoo.NET</title>
@@ -39,28 +39,12 @@
 <tbody><tr valign="top">
 	<td bgcolor="#FFFFFF" align="center">
 	<!--468x60-->
-<script>
-/*
-var BAN=new Array();
-BAN[0]="<a href='http://scripts.affiliatefuture.com/AFClick.asp?affiliateID=123965&merchantID=2715&programmeID=7084&mediaID=44313&tracking=&url='><img border=0 src='http://banners.affiliatefuture.com/2715/44313.gif'></a>";
-BAN[1]="<a href='http://scripts.affiliatefuture.com/AFClick.asp?affiliateID=123965&merchantID=3855&programmeID=9658&mediaID=70395&tracking=&url='><img border=0 src='http://banners.affiliatefuture.com/3855/70395.jpg'></a>";
-
-var CURBAN=BAN[Math.floor(Math.random()*BAN.length)];
-document.write(CURBAN);
-*/
-
-var sponads_border_color = "FFFFFF";
-var sponads_background_color = "FFFFFF";
-var sponads_title_color = "0000cc";
-var sponads_description_color = "000000";
-var sponads_url_color = "666EBA";
-var sponads_site_id = "83";
-var sponads_banner_type = "468";
-var sponads_banner_width = "468";
-var sponads_banner_height = "60";
-document.write('<script language="javascript" src="http://www.sponads.com/ads.js"><\/script>');
-</script><script language="javascript" src="http://www.sponads.com/ads.js"></script>
-	</td>
+<!--JavaScript Tag // Tag for network 525: easyAd USA // Website: Mario Grady (2594) // Page: www.cikoo.net (2687) // Placement: zz_468_60 (2176014) // created at: Sep 11, 2009 7:51:02 AM-->
+<script language="javascript"><!--
+document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.easyad.info/addyn/3.0/525/2176014/0/1/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
+//-->
+</script><script language="javascript1.1" src="http://adserver.easyad.info/addyn/3.0/525/2176014/0/1/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1582148206841"></script><noscript><a href="http://adserver.easyad.info/adlink/3.0/525/2176014/0/1/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://adserver.easyad.info/adserv/3.0/525/2176014/0/1/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="468" height="60"></a></noscript>
+<!-- End of JavaScript Tag -->	</td>
 </tr>
 </tbody></table>
 <table width="750" border="0" cellspacing="0" cellpadding="0">
@@ -142,15 +126,7 @@ document.write('<script language="javascript" src="http://www.sponads.com/ads.js
   </tr>
 </tbody></table>
 <div id="Sky_AD" style="position:absolute; width:225px; height:600px; z-index:1;left:750px;top:100px;padding-top:10px;">
-<script>
-/*
-var SKY=new Array();
-SKY[0]="<a href='http://scripts.affiliatefuture.com/AFClick.asp?affiliateID=123965&merchantID=2282&programmeID=6030&mediaID=36532&tracking=&url='><img border=0 src='http://banners.affiliatefuture.com/2282/36532.bmp'></a>";
-SKY[1]="<a href='http://scripts.affiliatefuture.com/AFClick.asp?affiliateID=123965&merchantID=3537&programmeID=8958&mediaID=64126&tracking=&url='><img border=0 src='http://banners.affiliatefuture.com/3537/64126.gif'></a>";
-var CURSKY=SKY[Math.floor(Math.random()*SKY.length)];
-document.write(CURSKY);
-*/
-</script>
+
 </div>
 
 
