--- a/y/yo/you/youth.ie.html
+++ b/y/yo/you/youth.ie.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the youth.ie privacy policy that was archived on 2009-05-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090515112837id_/http%3A//www.youth.ie/about_us/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youth.ie privacy policy that was archived on 2009-09-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090923215014id_/http%3A//www.youth.ie/about_us/privacy_policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>                            <title>Youth.ie - Privacy Policy - About Us - Home </title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>                            <title>Youth.ie - Privacy Policy - About Us - Home </title>
 
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="DC.Title" content="National Youth Council of Ireland">
@@ -102,7 +102,7 @@ The width of each item is then set in 54.css -->
     <!-- /header3 -->
     <!-- header4 holds search -->
     <div id="header4"> 
-      <div id="search1"><span><strong><a href="http://www.youth.ie/funding" style="color:#ff0000;">* Youth Work Funding Campaign update -&gt;</a></strong></span><a href="http://www.youth.ie/funding" style="color:#ff0000;">
+      <div id="search1"><span><strong><a href="http://www.youth.ie/funding" style="color:#ff0000;">** Youth Work Funding Campaign update **</a></strong></span>
 	  <!-- <form action="/searchpro/index.php" method="get" id="qs">
        <fieldset class="fieldset"> 
 		<label for="q">SEARCH </label>          
@@ -114,8 +114,8 @@ The width of each item is then set in 54.css -->
 <input class="sp2_btn" name="search" type="submit" id="search" value="search" />
  </fieldset> 
 </form>	-->	  
-	  </a></div><a href="http://www.youth.ie/funding" style="color:#ff0000;">
-	  </a><div id="icons"><a href="http://www.youth.ie/funding" style="color:#ff0000;"></a><ul id="tools"><a href="http://www.youth.ie/funding" style="color:#ff0000;"></a><li id="print"><a href="http://www.youth.ie/funding" style="color:#ff0000;"></a><a href="/layout/set/print/content/view/full/843">Print</a></li><li id="emailpage"><a href="/content/tipafriend/843">Email</a></li><!-- email was $node.node_id but blank in some instances--></ul>
+	  </div>
+	  <div id="icons"><ul id="tools"><li id="print"><a href="/layout/set/print/content/view/full/843">Print</a></li><li id="emailpage"><a href="/content/tipafriend/843">Email</a></li><!-- email was $node.node_id but blank in some instances--></ul>
 	  </div>
     </div>
     <!-- /header4 -->
@@ -130,7 +130,7 @@ The width of each item is then set in 54.css -->
 
 	<h2>About Us</h2>
 	<!-- Tree Menu, only display on second level pages, not homepage -->
-	<ul><li class="level_0"><a href="/about_us/values">Values</a></li><li class="level_0"><a href="/about_us/structure">Structure</a></li><li class="level_0"><a href="/about_us/board">Board</a></li><li class="level_0"><a href="/about_us/members__1">Members</a></li><li class="level_0"><a href="/about_us/staff">Staff</a></li><li class="level_0"><a href="/about_us/nyci_programmes">NYCI Programmes</a></li><li class="level_0"><a href="/about_us/nyci_as_a_representative_body">NYCI as a Representative Body</a></li><li class="level_0"><a href="/about_us/nyci_as_a_social_partner">NYCI as a Social Partner</a></li><li class="level_0"><a href="/about_us/youth_work">Youth Work</a></li><li class="level_0"><a href="/about_us/contact_us">Contact Us</a></li><li class="level_0"><div class="selected"><a href="/about_us/privacy_policy">Privacy Policy</a></div></li><li class="level_0"><a href="/about_us/security_statement">Security Statement</a></li><li class="level_0"><a href="/about_us/40_years_of_nyci">40 Years of NYCI</a></li></ul>
+	<ul><li class="level_0"><a href="/about_us/values">Values</a></li><li class="level_0"><a href="/about_us/structure">Structure</a></li><li class="level_0"><a href="/about_us/board">Board</a></li><li class="level_0"><a href="/about_us/members__1">Members</a></li><li class="level_0"><a href="/about_us/staff">Staff</a></li><li class="level_0"><a href="/about_us/nyci_programmes">NYCI Programmes</a></li><li class="level_0"><a href="/about_us/job_opportunities">Job Opportunities</a></li><li class="level_0"><a href="/about_us/nyci_as_a_representative_body">NYCI as a Representative Body</a></li><li class="level_0"><a href="/about_us/nyci_as_a_social_partner">NYCI as a Social Partner</a></li><li class="level_0"><a href="/about_us/youth_work">Youth Work</a></li><li class="level_0"><a href="/about_us/contact_us">Contact Us</a></li><li class="level_0"><div class="selected"><a href="/about_us/privacy_policy">Privacy Policy</a></div></li><li class="level_0"><a href="/about_us/security_statement">Security Statement</a></li><li class="level_0"><a href="/about_us/40_years_of_nyci">40 Years of NYCI</a></li></ul>
 	</div> <!-- /secondnav -->
 		      </td>
       <td valign="top" id="tblctr"> 
@@ -230,4 +230,33 @@ NYCI will make no attempt to identify individual visitors, or to associate the t
         <!-- /content -->
       </div></td>      
     
-     </tr></tbody></table></div></div></body></html>
+       </tr>
+  </tbody></table>
+    <div class="clearing">&nbsp;</div>
+	<div id="footerprog"><ul><li><a href="http://www.dailnanog.ie">Dáil na nÓg</a></li><li><a href="http://www.international.youth.ie">International</a></li><li><a href="http://www.childprotection.ie">National Child Protection Unit</a></li><li><a href="http://www.youtharts.ie/">Youth Arts Programme</a></li></ul>
+	<ul><li><a href="http://www.youthdeved.ie/">Development Education Programme</a></li><li><a href="http://www.youthhealth.ie/">Youth Health Programme</a></li></ul></div>
+    <div id="footer"> 
+      <ul><li><a href="/about_us/privacy_policy">Privacy</a></li><li><a href="/resources/faqs">FAQs</a></li><li><a href="/content/view/sitemap">Site Map</a></li><li><a href="/about_us/contact_us">Contact Us</a></li><li><a href="/about_us/security_statement">Security</a></li></ul>
+      <p>National Youth Council of Ireland, 3 Montague Street, Dublin 2, Ireland. 
+        <br>
+        <strong>tel:</strong> + 353 + 1 478 4122 <strong>fax:</strong> + 353 + 
+        1 478 3974 <strong>web:</strong> <a href="http://www.youth.ie">www.youth.ie</a> 
+        <strong>email: </strong><a href="mailto:info@nyci.ie">info@nyci.ie</a></p>
+    </div>
+      <!-- /footer -->
+  </div>
+  <!-- /wrapper -->
+</div>
+<!-- /outer_wrapper -->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-4070796-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+
+
+  </body></html>
