--- a/c/cu/cut/cutearcade.com.html
+++ b/c/cu/cut/cutearcade.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cutearcade.com privacy policy that was archived on 2009-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090618141627id_/http%3A//cutearcade.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cutearcade.com privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924010603id_/http%3A//www.cutearcade.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement - CuteArcade.com</title>
