gradesaver.com (archived on 2009-09-24)
{
  "alexa_rank": 34750,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4850,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.64,
  "homepage_snapshot_redirected_domain": "gradesaver.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090930162021id_/http://www.gradesaver.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090930162021id_/http%3A//gradesaver.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "gradesaver.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090924043907id_/http%3A//www.gradesaver.com/privacy",
  "policy_title": "Privacy Policy | GradeSaver",
  "policy_url": "gradesaver.com/privacy",
  "sha1": "95aae758b1a450db035501f6e67ba4558315d419",
  "simhash": 13656721530226885041,
  "simhash_updated": false,
  "site_hostname": "gradesaver.com",
  "site_url": "http://gradesaver.com",
  "smog": 13.56,
  "strict_updated": false,
  "timestamp": "20090924043907",
  "word_count": 813,
  "year": 2009
}

--- a/g/gr/gra/gradesaver.com.html
+++ b/g/gr/gra/gradesaver.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gradesaver.com privacy policy that was archived on 2009-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090523211035id_/http%3A//www.gradesaver.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gradesaver.com privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924043907id_/http%3A//www.gradesaver.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy | GradeSaver</title>
@@ -7,6 +7,8 @@
 <meta name="Description" content="">
 <meta name="Robots" content="">
 <meta name="Author" content="">
+<meta name="citeDate" content="">
+<meta name="citeTitle" content="">
 <base href="http://www.gradesaver.com/"><!--[if IE]></base><![endif]-->
 <link rel="stylesheet" type="text/css" href="static/css/reset-fonts.css">
 <link rel="stylesheet" type="text/css" href="static/css/main.css">
@@ -50,7 +52,7 @@ GS_BASE = 'http://www.gradesaver.com/';
 rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
 if (window.self != window.top) { nf='' } else { nf='NF/' };
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad9283a.cgi/v=2.1S/sz=728x90A/'+rnum+'/NI/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9283a.cgi/v=2.1S/sz=728x90A/93225/NI/NF/RETURN-CODE/JS/"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad9283a.cgi/v=2.1S/sz=728x90A/5109/NI/NF/RETURN-CODE/JS/"></script>
 <!-- END BURST CODE -->
  
 
@@ -73,7 +75,7 @@ document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad9283a.cgi/v
 rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
 if (window.self != window.top) { nf='' } else { nf='NF/' };
 document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/sk9283a.cgi/v=2.1S/sz=160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/sk9283a.cgi/v=2.1S/sz=160x600A/85585/NF/RETURN-CODE/JS/"></script>
+</script><script src="http://www.burstnet.com/cgi-bin/ads/sk9283a.cgi/v=2.1S/sz=160x600A/89281/NF/RETURN-CODE/JS/"></script>
 <!-- END BURST CODE -->
 </div>
 
