--- a/s/sa/san/santaclaraca.gov.html
+++ b/s/sa/san/santaclaraca.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the santaclaraca.gov privacy policy that was archived on 2009-05-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090522192448id_/http%3A//www.santaclaraca.gov/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the santaclaraca.gov privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924050534id_/http%3A//santaclaraca.gov/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/secondLevel.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
@@ -290,6 +290,7 @@ addthis_options         = 'favorites, email, print, twitter, digg, delicious, fa
 <!-- Google CSE Search Box Ends -->
 </div>
 <script type="text/javascript" src="/include/searchUrl.js"> </script>
+<script src="/include/gatag.js" type="text/javascript"></script>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
