crazy-frankenstein.com (archived on 2009-09-24)
{
  "alexa_rank": 53514,
  "analysis_subcorpus": true,
  "categories": "entertainment;mediasharing",
  "char_count": 1914,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.84,
  "homepage_snapshot_redirected_domain": "crazy-frankenstein.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091005220912id_/http://crazy-frankenstein.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091005220912id_/http%3A//crazy-frankenstein.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "crazy-frankenstein.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090924091326id_/http%3A//crazy-frankenstein.com/privacy-policy.html",
  "policy_title": "Privacy Policy - Crazy Frankenstein",
  "policy_url": "crazy-frankenstein.com/privacy-policy.html",
  "sha1": "2ded960f330b7ad62efd05cd83ebbae9f2d7381a",
  "simhash": 4974504925783772608,
  "simhash_updated": false,
  "site_hostname": "crazy-frankenstein.com",
  "site_url": "http://crazy-frankenstein.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090924091326",
  "word_count": 308,
  "year": 2009
}

--- a/c/cr/cra/crazy-frankenstein.com.html
+++ b/c/cr/cra/crazy-frankenstein.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the crazy-frankenstein.com privacy policy that was archived on 2009-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090603210553id_/http%3A//crazy-frankenstein.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the crazy-frankenstein.com privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924091326id_/http%3A//crazy-frankenstein.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Privacy Policy - Crazy Frankenstein</title>
@@ -24,9 +24,23 @@
 <div id="heup">
 
 <div align="center">
-<!-- BEGIN STANDARD TAG - 468 x 60 - ROS: Run-of-site - DO NOT MODIFY -->
-<iframe frameborder="0" marginwidth="0" marginheight="0" scrolling="NO" width="468" height="60" src="http://ad.media-servers.net/st?ad_type=iframe&amp;ad_size=468x60&amp;section=405649"></iframe>
-<!-- END TAG -->
+<!-- ValueClick Media 468x60 Banner v1.4 for crazy-frankenstein.com -->
+<script language="Javascript"><!--
+var i=j=p=t=u=x=z=dc='';var id=f=0;var f=Math.floor(Math.random()*7777);
+id=38519; dc=document;u='ht'+'tp://media.fastclick.net/w'; x='/get.media?t=s';
+z=' width=468 height=60 border=0 ';t=z+'marginheight=0 marginwidth=';
+i=u+x+'&sid='+id+'&m=1&tp=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
+u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_top">';
+dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
+if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=38519&amp;m=1&amp;tp=1&amp;f=b&amp;v=1.4&amp;c=6580&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=38519&m=1&c=6580"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=38519&m=1&tp=1&f=b&v=1.4&c=6580&r=&d=n" width=468 height=60 border=0 ></a>
+</iframe>
+<noscript>
+<a href="http://media.fastclick.net/w/click.here?sid=38519&m=1&c=1"  target="_top">
+<img src="http://media.fastclick.net/w/get.media?sid=38519&m=1&tp=1&d=s&c=1&f=b&v=1.4"
+width=468 height=60 border=1></a></noscript>
+<!-- ValueClick Media 468x60 Banner v1.4 for crazy-frankenstein.com -->
 </div>
 
 </div>
@@ -186,6 +200,7 @@ or your dealings with this Web site, you can <a href="contact-us.html"><strong>c
 
 <div style="clear: both;"></div>	
 <!--------------------------------- end of postblock ------------------------------------>
+
 
 <div id="webbox">
 <div class="cz-links"><a href="contact-us.html" title="To add your link - contact us">Cool links</a></div>
@@ -347,7 +362,6 @@ or your dealings with this Web site, you can <a href="contact-us.html"><strong>c
   
 </tbody></table>
 <br>
-
 	
 
 </div>
@@ -365,7 +379,7 @@ or your dealings with this Web site, you can <a href="contact-us.html"><strong>c
 <h2>| <a href="index.html">Home</a> | <a href="disclaimer.html">Disclaimer</a> | <a href="privacy-policy.html">Privacy Policy</a> | <a href="link-exchange.html">Link exchange</a> | <a href="http://crazy-frankenstein.blogspot.com/" rel="nofollow" target="_blank">Blog</a> | <a href="contact-us.html">Contact</a> |</h2>
 
 <!-- Counter -->
-		<div id="eXTReMe"><a href="http://extremetracking.com/open?login=macascf">
+		<div id="eXTReMe"><div id="eXTReMe"><a href="http://extremetracking.com/open?login=macascf">
 <img src="http://t1.extreme-dm.com/i.gif" style="border: 0;" height="38" width="41" id="EXim" alt="eXTReMe Tracker"></a>
 <script type="text/javascript"><!--
 var EXlogin='macascf' // Login
@@ -380,9 +394,9 @@ EXd.write("<img src=http://e1.extreme-dm.com",
 "l="+escape(EXd.referrer)+" height=1 width=1>");//-->
 </script><img src="http://e1.extreme-dm.com/s10.g?login=macascf&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="neXTReMe"><img height="1" width="1" alt=""
 src="http://e1.extreme-dm.com/s10.g?login=macascf&amp;j=n&amp;jv=n" />
-</div></noscript></div>
+</div></noscript></div></div>
 		<!-- Counter -->
-<!-- Start FreeOnlineUsers.com -->
+		
 <p> 
 <a href="http://www.freeonlineusers.com">
  <script type="text/javascript" src="http://st1.freeonlineusers.com/on1.php?id=50648"> </script> Online CF users </a></p>
@@ -423,6 +437,14 @@ src="http://e1.extreme-dm.com/s10.g?login=macascf&amp;j=n&amp;jv=n" />
 	
  </div>
 <div class="bg-cornerdw"></div>
-</div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9434182-1");
+pageTracker._trackPageview();
+} catch(err) {}</script></div>
  
 </body></html>
