operationsmile.org (archived on 2009-09-24)
{
  "alexa_rank": 236290,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8230,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.94,
  "homepage_snapshot_redirected_domain": "operationsmile.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090929174332id_/http://www.operationsmile.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090929174332id_/http%3A//operationsmile.org",
  "interval": "2009_B",
  "link_text": "Copyright & Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "operationsmile.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090924102016id_/http%3A//www.operationsmile.org/privacy-policy.html",
  "policy_title": "Privacy Policy - Operation Smile",
  "policy_url": "operationsmile.org/privacy-policy.html",
  "sha1": "6927a1a83e7e384691ee0b2479972f8316d70504",
  "simhash": 2064547273337120217,
  "simhash_updated": true,
  "site_hostname": "operationsmile.org",
  "site_url": "http://operationsmile.org",
  "smog": 16.57,
  "strict_updated": true,
  "timestamp": "20090924102016",
  "word_count": 1313,
  "year": 2009
}

--- a/o/op/ope/operationsmile.org.html
+++ b/o/op/ope/operationsmile.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the operationsmile.org privacy policy that was archived on 2009-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090622004038id_/http%3A//www.operationsmile.org/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the operationsmile.org privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924102016id_/http%3A//www.operationsmile.org/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
@@ -49,8 +49,8 @@ window.onload=startList;
   <div id="contenido_centrado">
     <div id="home_banner">
       <h1><a href="http://www.operationsmile.org/">Operation Smile - Changing Lives One Smile at a Time</a></h1>
-      <div id="hdonate"><a href="https://secure3.convio.net/smile/site/Donation2?df_id=1280&amp;1280.donation=form1"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_make_donation.gif" alt="Donate Now" onmouseover="this.src='/assets/images/wrapper/boton_make_donation_over.gif'" onmouseout="this.src='/assets/images/wrapper/boton_make_donation.gif'"></a> </div>
-      <div id="home_search"> <div id="item-55278283" style="DISPLAY: inline">
+      <div id="hdonate"><a href="https://secure.operationsmile.org/site/Donation2?df_id=3740&amp;3740.donation=form1"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_make_donation.gif" alt="Donate Now" onmouseover="this.src='/assets/images/wrapper/boton_make_donation_over.gif'" onmouseout="this.src='/assets/images/wrapper/boton_make_donation.gif'"></a> </div>
+      <div id="home_search"> <div id="item-81779712" style="DISPLAY: inline">
 
 
 
@@ -74,7 +74,7 @@ window.onload=startList;
     </div>
     <!-- end of home banner -->
     <div id="links_banner">
-      <div id="slidedown_menu"> <div id="item-55278284" style="DISPLAY: inline">
+      <div id="slidedown_menu"> <div id="item-81779713" style="DISPLAY: inline">
 
 
 
@@ -137,7 +137,7 @@ window.onload=startList;
       <li><a href="http://www.operationsmile.org/missions/dental-care-program/">Dental Care Program</a></li>
       <li><a href="http://www.operationsmile.org/missions/world-care-program/">World Care Program</a></li>
       <li><a href="http://www.operationsmile.org/missions/testimonials/">Patient Stories</a></li>
-      <li><a href="http://www.operationsmile.org/missions/us-care-network/">US Care Network</a></li>
+      <li><a href="http://www.operationsmile.org/missions/us-care-network/">U.S. Care Network</a></li>
       <li><a href="http://www.operationsmile.org/missions/international-medical-care/">International Medical Care</a></li>
       <li style="background-image:url('/assets/images/wrapper/menu_bottom.gif'); background-repeat: no-repeat; padding: 0;"><a href="#"></a><img src="http://www.operationsmile.org/assets/images/wrapper/transparent.gif" border="0" height="21"></li>
     </ul>
@@ -203,7 +203,7 @@ window.onload=startList;
     <!-- end of menu -->
     <div id="content" class="clearfix">
     <div id="leftcol">
-   <div id="sectionNavigation-55278285" style="DISPLAY: inline">
+   <div id="sectionNavigation-81779714" style="DISPLAY: inline">
 
 
 
@@ -212,22 +212,26 @@ window.onload=startList;
 
 
 
-<!-- BEGIN: section navigation -->
 
 
 
 
 
 
+
+
+<div class="linksetMenu linksetSubMenu-1 navigationMenu">
+
+  </div>
 </div>
-  <a href="https://secure3.convio.net/smile/site/Donation2?df_id=1280&amp;1280.donation=form1" class="action"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_donate_now.gif" alt="Donate Now" onmouseover="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_donate_now_over.gif'" onmouseout="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_donate_now.gif'"></a> 
+  <a href="https://secure.operationsmile.org/site/Donation2?df_id=3740&amp;3740.donation=form1" class="action"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_donate_now.gif" alt="Donate Now" onmouseover="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_donate_now_over.gif'" onmouseout="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_donate_now.gif'"></a> 
   <a href="http://support.operationsmile.org/site/TellAFriend" class="action"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_tell_a_friend.gif" alt="Tell A Friend" onmouseover="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_tell_a_friend_over.gif'" onmouseout="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_tell_a_friend.gif'"></a> 
   
   <a href="http://support.operationsmile.org/site/Survey?ACTION_REQUIRED=URI_ACTION_USER_REQUESTS&amp;SURVEY_ID=1640" class="action"><img src="http://www.operationsmile.org/assets/images/wrapper/boton_subscribe.gif" alt="Subscribe" onmouseover="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_subscribe_over.gif'" onmouseout="this.src='http://www.operationsmile.org/assets/images/wrapper/boton_subscribe.gif'"></a>
   
    </div>
 <div id="maincol" class="clearfix">
-<div class="content"><div id="breadcrumb-55278286" style="DISPLAY: inline">
+<div class="content"><div id="breadcrumb-81779715" style="DISPLAY: inline">
 
 
 
@@ -253,7 +257,7 @@ window.onload=startList;
 
 </span>
 </div><div id="18536225" style="DISPLAY: inline"></div>
-<div id="printer_friendly-55278287" style="DISPLAY: inline">
+<div id="printer_friendly-81779716" style="DISPLAY: inline">
 
 
 
@@ -331,7 +335,7 @@ window.onload=startList;
 
 <script>
   
-  document.write("<iframe id='tracker' name='tracker' style='border:0 none;width:1px;height:1px' src='/system/blank.html'></iframe>");
+  document.write("<iframe id='tracker' name='tracker' style='border:0;display:none;width:1px;height:1px' src='/system/blank.html'></iframe>");
 
   var loadSessionTracker = function() { 
 
@@ -353,7 +357,7 @@ window.onload=startList;
     window.addEventListener("load", loadSessionTracker, false);
   }
 
-</script><iframe id="tracker" name="tracker" style="border:0 none;width:1px;height:1px" src="/system/blank.html"></iframe>
+</script><iframe id="tracker" name="tracker" style="border:0;display:none;width:1px;height:1px" src="/system/blank.html"></iframe>
 
 
 
@@ -443,7 +447,7 @@ CONVIO.user.isAnonymous = true;
 initSlideDownMenu();
 </script>
 
-<div id="item-55278288" style="DISPLAY: inline">
+<div id="item-81779717" style="DISPLAY: inline">
 
 
 
