--- a/h/he/hea/heals.co.uk.html
+++ b/h/he/hea/heals.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the heals.co.uk privacy policy that was archived on 2009-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090628085506id_/http%3A//www.heals.co.uk/pcat/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the heals.co.uk privacy policy that was archived on 2009-09-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090924190951id_/http%3A//www.heals.co.uk/pcat/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>
@@ -48,7 +48,6 @@ Heal's
 
 
 <meta http-equiv="X-UA-Compatible" content="IE=7">
-
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <style type="text/css" media="screen, projector">
 @import "http://www.heals.co.uk/content/ebiz/heals/resources/css/styles.css";@import "http://www.heals.co.uk/content/ebiz/heals/resources/css/elements.css";@import "http://www.heals.co.uk/content/ebiz/heals/resources/css/privacycolourscheme.css";@import "http://www.heals.co.uk/content/ebiz/heals/resources/css/external/yui/container-skin.css";
@@ -169,7 +168,7 @@ Heal's
 
 <div id="cartwrapper">
 <div class="Lminicart_detail" id="minicart_element">
-<h2><span></span><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22">Your Basket</a></h2>
+<div class="exh2"><span></span><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22">Your Basket</a></div>
 
 
 
@@ -301,7 +300,7 @@ Heal's
 };
 </script>
 <div id="minicart_detail"><div class="yui-panel-container" id="popupcart_panel_c" style="z-index: 0; visibility: hidden;"><div id="popupcart_panel" class="yui-module yui-overlay yui-panel" style="visibility: inherit; width: 200px;"><div class="hd" id="popupcart_panel_h" style="cursor: move;"><div class="tl"></div><span>Your Basket</span><span id="minicart-close">&nbsp;</span><div class="tr"></div></div><div class="bd"><div id="popupcart">
-<h2><span></span><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22">Your Basket</a></h2>
+<div class="exh2"><span></span><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22">Your Basket</a></div>
 
 
 
@@ -328,7 +327,7 @@ Heal's
 </ul>
 
 </div></div></div></div></div>
-<h2><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22" id="showminicart">Your Basket</a></h2>
+<div class="exh2"><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22" id="showminicart">Your Basket</a></div>
 <ul class="items_empty">
 	<li class="items"><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22" id="minicart_items">Items:<span id="updateItems">0</span></a></li>
 	<li class="total"><a href="http://www.heals.co.uk/bin/venda?ex=co_wizr-shopcart&amp;bsref=heals&amp;log=22" id="minicart_total">Total:<span id="updateTotal">£0.00</span></a></li>
@@ -339,14 +338,14 @@ function checkFormGN() {
 var searchForm = document.formlocaytasearch;
 var hasValue=0;
 
-    for(i=0;i<(searchForm.elements.length);i++)
-    {
-    	if((searchForm.elements[i].type == "select-one") && (searchForm.elements[i].options[searchForm.elements[i].selectedIndex].value!="")){
-    		hasValue=1;
-    	}
-    	else if((searchForm.elements[i].type == "text") && (searchForm.elements[i].value!="")){
-    		hasValue=1;
-       	}
+    for(i=0;i<(searchForm.elements.length);i++)
+    {
+    	if((searchForm.elements[i].type == "select-one") && (searchForm.elements[i].options[searchForm.elements[i].selectedIndex].value!="")){
+    		hasValue=1;
+    	}
+    	else if((searchForm.elements[i].type == "text") && (searchForm.elements[i].value!="")){
+    		hasValue=1;
+       	}
 	}
 	
 if(hasValue!=1){
@@ -363,7 +362,7 @@ function checkFieldGN(formName, field, defaultStr) {
 // -->
 </script>
 <div class="Lsearch locaytasearch">
-<h2><span></span>Search</h2>
+<div class="exh2"><span></span>Search</div>
 <form name="formlocaytasearch" id="formlocaytasearch" method="get" action="http://www.heals.co.uk/bin/venda" onsubmit="checkFieldGN('formlocaytasearch','termtextkeywordsearch','ENTER SEARCH TERM, KEYWORD OR PRODUCT ID'); checkFormGN(); return(false);">
 <input type="hidden" name="ex" id="ex" value="co_wizr-locayta">
 <input type="hidden" name="template" id="template" value="wz_locayta">
@@ -397,7 +396,7 @@ function checkFieldGN(formName, field, defaultStr) {
 	<input type="hidden" name="typekeywordsearch" id="typekeywordsearch" value="keyword">
 	<input type="text" name="termtextkeywordsearch" id="termtextkeywordsearch" size="20" value="ENTER SEARCH TERM, KEYWORD OR PRODUCT ID" onclick="if (this.value=='ENTER SEARCH TERM, KEYWORD OR PRODUCT ID'){this.value='';}">
 </fieldset>
-<input type="image" name="searchsubmit" id="searchsubmit" src="http://www.heals.co.uk/content/ebiz/heals/resources/images/bt_go_search.gif" alt="Go" onclick="if (termtextkeywordsearch.value=='ENTER SEARCH TERM, KEYWORD OR PRODUCT ID'){termtextkeywordsearch.value='';}">
+<input type="image" name="searchsubmit" id="searchsubmit" src="http://www.heals.co.uk/content/ebiz/heals/resources/images/bt_go_search.gif" alt="Search" onclick="if (termtextkeywordsearch.value=='ENTER SEARCH TERM, KEYWORD OR PRODUCT ID'){termtextkeywordsearch.value='';}">
 
 
 </form>
@@ -672,7 +671,7 @@ function checkFieldGN(formName, field, defaultStr) {
 	<!-- FOR PCAT category -->
 		
 
-<h2>Ordering Online at Heals</h2>
+<div class="exh2">Ordering Online at Heals</div>
 <div id="pcat_leftnav">
 	<ul id="catlist">
 	
@@ -740,12 +739,11 @@ function checkFieldGN(formName, field, defaultStr) {
 
 <div id="footer"><div class="Lcat_footer"><style type="text/css">
 #homebottom .emailsignup{width:233px;height:105px; margin-right: 2px; float:left; background: url(http://www.heals.co.uk/content/ebiz/heals/resources/images/bg_newsletter.gif) 0 0 no-repeat; color: #FFFFFF;}
-#homebottom .emailsignup h2, #homebottom .events h2{display: none;}
+#homebottom .emailsignup div.exh2, #homebottom .events div.exh2{display: none;}
 #homebottom #ourstore{width: 233px; height: 105px; margin-right: 2px; float: left; background: url(http://www.heals.co.uk/content/ebiz/heals/resources/images/bg_ourstore.gif) 0 0 no-repeat; color: #FFFFFF;}
 #homebottom #ourstore p{width: 200px; display: block; margin: 14px; font-size: 1.090em;}
 #homebottom #ourstore p a:link{color: #FFFFFF; text-decoration: none;}
-#homebottom #coolbrands{width: 233px; height: 105px; margin-right: 2px; float: left; background: url(http://www.heals.co.uk/content/ebiz/heals/resources/images/bg_coolbrands.gif) 0 0 no-repeat; color: #FFFFFF;}
-#homebottom #coolbrands p{width: 149px; display: block; margin:14px; font-size: 1.090em;}
+#homebottom #coolbrands{width: 233px; height: 105px; margin-right: 2px; float: left; background: url(http://www.heals.co.uk/content/ebiz/heals/resources/images/bg_coolbrands.gif) 0 0 no-repeat; color: #FFFFFF;}#homebottom #coolbrands p{width: 200px; display: block; margin:14px; font-size: 1.090em;}
 #homebottom .events{width: 233px; height: 105px; margin-right: 0px; float: right; background: url(http://www.heals.co.uk/content/ebiz/heals/resources/images/bg_newsevents.gif) 0 0 no-repeat;}
 #homebottom .events #catlist{margin: 14px 0 0 14px;}
 #homebottom .events #catlist li a{color: #FFFFFF; font-size: 1.090em;}
@@ -753,7 +751,7 @@ function checkFieldGN(formName, field, defaultStr) {
 </style>
 <div id="homebottom"> 
 <div class="Lemailsignup emailsignup">
-<h2><span></span>Newsletter</h2>
+<div class="exh2"><span></span>Newsletter</div>
 <form name="emailsonly1" action="http://www.heals.co.uk/bin/venda" method="get" onsubmit="validateEmail(document.emailsonly1,'Please enter a valid email address'); return false;">
 <input type="hidden" name="ex" value="co_disp-view">
 <input type="hidden" name="bsref" value="heals">
@@ -770,13 +768,14 @@ function checkFieldGN(formName, field, defaultStr) {
 </form>
 </div>
 <div id="ourstore">
-<p>To find our Store locations, details of shop opening times &amp; in store services, please <a href="http://www.heals.co.uk/Our-Stores/Stores-Locator/pcat/our_stores" <style="color:#FFF;">click here</a></p>
-</div>
+<p><a href="http://www.heals.co.uk/page/heals_1810_2010_book"> <font color="#FFFFFF">To celebrate our Bicentenary we have launched our new book, "Heal's - 200 years of design &amp; inspiration". Please click here</font></a>
+</p></div>
+
 
 
 
 <div id="coolbrands">
-<p>Heal's have received the prestigious award of being recognised as a Coolbrand 2009</p>
+<p>For Heal's "Presents for Particular People" and Christmas decoration ideas, please <a href="http://www.heals.co.uk/Gifts/icat/gifts&quot;" target="_blank"><font color="#FFFFFF">click here</font></a></p>
 </div>
 <div class="events">
 	
@@ -787,19 +786,23 @@ function checkFieldGN(formName, field, defaultStr) {
 		
 	
 		
+		<li><a title="Interior Design Service Offer" href="http://www.heals.co.uk/News+Events/Interior-Design-Service-Offer/pcat/interior_design&amp;bklist=pcat,3,eventcategory,interior_design"><div id="navinterior_design" class="padding_L5"> Interior Design Service Offer</div></a></li>
+		
+	
+
+	
+		
+		<li><a title="Heal's Sensational Collection" href="http://www.heals.co.uk/News+Events/Heals-Sensational-Collection/pcat/heals_sensational&amp;bklist=pcat,3,eventcategory,heals_sensational"><div id="navheals_sensational" class="padding_L5"> Heal's Sensational Collection</div></a></li>
+		
+	
+
+	
+		
 		<li><a title="Heal's Warehouse Sale" href="http://www.heals.co.uk/News+Events/Heals-Warehouse-Sale/pcat/ourwarehousesale&amp;bklist=pcat,3,eventcategory,ourwarehousesale"><div id="navourwarehousesale" class="padding_L5"> Heal's Warehouse Sale</div></a></li>
 		
 	
 
 	
-		
-		<li><a title="Win a Break with Westin" href="http://www.heals.co.uk/News+Events/Win-a-Break-with-Westin/pcat/westin&amp;bklist=pcat,3,eventcategory,westin"><div id="navwestin" class="padding_L5"> Win a Break with Westin</div></a></li>
-		
-	
-
-	
-		
-		<li><a title="Customer Reviews are now live" href="http://www.heals.co.uk/News+Events/Customer-Reviews-are-now-live/pcat/product_reviews&amp;bklist=pcat,3,eventcategory,product_reviews"><div id="navproduct_reviews" class="padding_L5"> Customer Reviews are now live</div></a></li>
 		
 	
 
@@ -1242,25 +1245,6 @@ function checkFieldGN(formName, field, defaultStr) {
 	
 	
 
-	
-	
-	
-		
-		
-	
-
-	
-		<li class="foot_navbookmark"><a href="" alt="Bookmark">Bookmark</a></li>
-	
-		
-	
-	
-	
-	
-	
-		<li class="foot_nav_bookmark"><a target="_blank" onclick="addthis_url = location.href; addthis_title = document.title; return addthis_click(this);" href="http://www.addthis.com/bookmark.php" alt="Bookmark" title="Bookmark">Bookmark</a></li>
-	
-
 </ul>
 <style type="text/css">
 .foot_navaffiliates {display:none;}
@@ -1365,6 +1349,23 @@ function checkFieldGN(formName, field, defaultStr) {
 	
 	
 
+	
+	
+	
+		
+		
+	
+
+	
+		<li class="foot_navsocial_networks"><a href="/pcat/social_networks" alt="Follow Us">Follow Us</a></li>
+	
+		
+	
+	
+	
+	
+	
+
 </ul>
 <style type="text/css">
 .foot_navaffiliates {display:none;}
@@ -1382,40 +1383,6 @@ function checkFieldGN(formName, field, defaultStr) {
 
 <ul id="bullet">
 	
-	
-	
-	
-		
-		
-	
-
-	
-		<li class="foot_navourwarehousesale"><a href="/pcat/ourwarehousesale" alt="Heal's Warehouse Sale">Heal's Warehouse Sale</a></li>
-	
-		
-	
-	
-	
-	
-	
-
-	
-	
-	
-		
-		
-	
-
-	
-		<li class="foot_navwestin"><a href="http://www.heals.co.uk/pcat/westin" alt="Win a Break with Westin">Win a Break with Westin</a></li>
-	
-		
-	
-	
-	
-	
-	
-
 	
 	
 	
@@ -1480,8 +1447,11 @@ function checkFieldGN(formName, field, defaultStr) {
 	<br class="clear-all">
 </div>
 	<br class="clear-all"><div class="quicklink_ft">
-Heal's - The home of modern, designer and contemporary furniture, homewares, lighting, kitchen, bed and bathroom accessories and gifts. Beginning as a bed making firm in 1810, Heal's have been designing and making quality furniture ever since. We have a tradition of using the most talented designers and craftsmen of the day to make furniture that is comfortable, beautiful and affordable. Heal's - Better Furniture for Better Times, since 1810<br>
-</div><div class="Lfooter footer">
+Heal's - The home of modern, designer and <a href="http://www.heals.co.uk/Furniture/icat/furniture">contemporary furniture</a>, <a href="http://www.heals.co.uk/Accessories/icat/home_accessories">home accessories</a>, <a href="http://www.heals.co.uk/Lighting/icat/lighting">lighting</a>, <a href="http://www.heals.co.uk/Kitchen/icat/kitchen">kitchen equipment</a>, <a href="http://www.heals.co.uk/Dining-Room/icat/dining_room">dining</a>, <a href="http://www.heals.co.uk/Bedroom/icat/bedroom">bedroom</a> and <a href="http://www.heals.co.uk/Bathroom/icat/bathroom">bathroom</a> accessories and <a href="http://www.heals.co.uk/Gifts/icat/gifts">gifts</a>. Beginning as a bed making firm in 1810, Heal's have been designing and making quality furniture ever since. We have a tradition of working the most talented <a href="http://www.heals.co.uk/pcat/designers">designers</a>, craftsmen and <a href="http://www.heals.co.uk/pcat/heals_brands">brands</a> of the day to make furniture that is comfortable, beautiful and affordable. Heal's - Better Furniture for Better Times, since 1810<br>
+</div>
+
+
+<div class="Lfooter footer">
 
 </div><div class="footerlogo"><div class="Lcat_footerlogo"><!-- PayPal Logo --><div id="paypallogo"><a href="#" onclick="javascript:window.open('https://www.paypal.com/uk/cgi-bin/webscr?cmd=xpt/Marketing/popup/OLCWhatIsPayPal-outside','olcwhatispaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=400, height=350');" title="Heal's - Paypal Authorized"><img src="/content/ebiz/heals/page/paypal/paypal_logo.gif" border="0" alt="Heal's - Paypal Authorized"></a></div><!-- PayPal Logo --><div id="verisignlogo"><a href="https://seal.verisign.com/splash?form_file=fdf/splash.fdf&amp;dn=WWW.HEALS.CO.UK&amp;lang=en" rel="popup console 535 500" target="_blank" title="Heal's - Secured by Verisign"><img src="/content/ebiz/heals/page/verisign/verisign_logo.gif" border="0" alt="Heal's - Secured by Verisign"></a></div><div id="pcilogo"><a title="Heal's - Tier 1 PCI Compliant" rel="popup console 500 650" target="_blank" href="http://www.venda.com/pci-compliance-certificate?referer=www.heals.co.uk"><img border="0" alt="Heal's - Tier 1 PCI Compliant" name="image" src="/content/ebiz/heals/element/pcilink/pcireview.png"></a></div>
 <div id="vendalogo"><a href="http://www.venda.com" rel="popup" target="_blank"><img src="/venda-support/images/vendalogo/en_logo_light.png" alt="eCommerce and CRM systems powered by Venda"></a></div></div></div><br class="clear-all"><div class="copyrightcatelement"><div class="Lcat_copyrightcatelement"><div class="Lcopyright  copyright">
