azblue.com (archived on 2009-09-25)
{
  "alexa_rank": 429196,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 19517,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.66,
  "homepage_snapshot_redirected_domain": "azblue.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091007000114id_/http://www.azblue.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091007000114id_/http%3A//azblue.com",
  "interval": "2009_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "azblue.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090925020923id_/http%3A//www.azblue.com/Privacy-Statement/Index.aspx",
  "policy_title": "AzBlue.com Privacy Statement",
  "policy_url": "azblue.com/Privacy-Statement/Index.aspx",
  "sha1": "5612ba4cf2cb38f7b99015633005d728390f5084",
  "simhash": 3572134619352125898,
  "simhash_updated": true,
  "site_hostname": "azblue.com",
  "site_url": "http://azblue.com",
  "smog": 15.16,
  "strict_updated": true,
  "timestamp": "20090925020923",
  "word_count": 3194,
  "year": 2009
}

--- a/a/az/azb/azblue.com.html
+++ b/a/az/azb/azblue.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the azblue.com privacy policy that was archived on 2009-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090621200940id_/http%3A//www.azblue.com/Privacy-Statement/Index.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the azblue.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925020923id_/http%3A//www.azblue.com/Privacy-Statement/Index.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	AzBlue.com Privacy Statement
@@ -31,7 +31,7 @@
 /* You may give each page an identifying name, server, and channel on the next lines. */
 s.pageName=""
 s.server=""
-s.channel=""
+s.channel="azblue.com"
 s.pageType=""
 s.prop1=""
 s.prop2=""
