--- a/d/da/dav/daviscup.com.html
+++ b/d/da/dav/daviscup.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the daviscup.com privacy policy that was archived on 2009-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090619112522id_/http%3A//www.daviscup.com/about/legal.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the daviscup.com privacy policy that was archived on 2009-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090925021015id_/http%3A//www.daviscup.com/about/legal.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>daviscup.com - Legal Information</title>
 <base href="http://www.daviscup.com/">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"> <!-- force IE8 into compatibility mode. PC 210709 -->
 <meta name="description" content="Official website of the Davis Cup by BNP Paribas, the annual international team tennis competition for men. Details on players, ties, results and history of this ITF event, the largest annual international team competition in sport.">
 <meta name="keywords" content="Davis Cup, Copa Davis, tennis, mens tennis, sport, mens sport, International Tennis Federation, ITF, tennis news, tennis live scores, tennis scores, tennis results, LTA, Andy Roddick, Roger Federer, David Nalbandian, Andy Murray, Rafael Nadal, Novak Djokovic, Nikolay Davydenko">
 <meta http-equiv="Content-Language" content="en-GB">
 <link href="/shared/style/shared.css" type="text/css" rel="stylesheet">
-<link href="/shared/feeds/rss.xml" rel="alternate" type="application/rss+xml" title="Davis Cup RSS Feed">
+<link href="/shared/feeds/dcrss.xml" rel="alternate" type="application/rss+xml" title="Davis Cup RSS Feed">
 <script language="javascript" src="/shared/js/general.js" type="text/javascript"></script>
 <script language="javascript" src="/shared/js/coolmenus4.js" type="text/javascript"></script>
 <script language="javascript" src="/shared/js/cm_addins.js" type="text/javascript"></script>
@@ -199,7 +200,7 @@ The following provides detail about our Privacy Policy. <br><br>We treat your pr
 <td width="40" class="footer"><a href="/about/aboutITF.asp"><img width="40" height="20" border="0" src="/shared/images/footer/itf_logo_footer.gif" alt="More information on the ITF"></a></td>
 <td width="320" class="footer" align="right"></td> 
 <td width="100" class="footer" align="right"><a href="/news/rss.asp">What is RSS?</a></td>
-<td width="20" class="footer"><a href="/shared/feeds/rss.xml"><img width="16" height="16" border="0" src="/shared/images/feed.gif" alt="RSS Feeds from the ITF"></a></td> 
+<td width="20" class="footer"><a href="/shared/feeds/dcrss.xml"><img width="16" height="16" border="0" src="/shared/images/feed.gif" alt="RSS Feeds from the ITF"></a></td> 
 <td width="80" class="footer" align="right"><a href="/accessibility.asp">Accessibility</a></td> 
 <td width="90" class="footer" align="right"><a href="/contact.asp">Contact Us</a></td> 
 <td width="70" class="footer" align="right"><a href="/es" style="color: #000000;">Español</a></td>
